infra/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mainplatform
  labels:
    policy.sigstore.dev/include: "true"
  annotations:
    argocd.argoproj.io/sync-wave: "-3"
